add_library(data_structures
        bitset/bitset.c
        bitset/bitset.h

        unordered_array_set/unordered_array_set.c
        unordered_array_set/unordered_array_set.h

        vector/vector.c
        vector/vector.h
        vector/vectorTests.c

        matrix/matrix.c
        matrix/matrix.h
        matrix/matrixTests.c
        matrix/matrixExercises.c

        string/string_.c
        string/string_.h
        string/stringTests.c)